k8s-deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: server-bot

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: server-bot
  name: server-bot-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: server-bot-app
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: server-bot-app
    spec:
      containers:
        - name: server-bot-app
          image: jpbarto/server-bot:v2
          ports:
            - containerPort: 5000
              name: server-bot-port

---
apiVersion: v1
kind: Service
metadata:
  namespace: server-bot
  name: server-bot-service
spec:
  selector:
    app.kubernetes.io/name: server-bot-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: server-bot-port
